--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 		{% endif %}
 	{% endwith %}
 	
-	<form action="#" method="post">
+	<form id="login-form" action="#" method="post">
 		<h2> Username </h2>
 		<input type="text" name="username"/>
 
