--- a/static/css/video.css
+++ b/static/css/video.css
@@ -1,7 +1,37 @@
 /* Video page body */
 video {
-	display: block;
-	width: 60%;
 	margin-right: auto;
 	margin-left: auto;
+
+	display: block;
+	width: 60%;
+}
+
+#new-comment-text {
+	border-width: 3px;
+	border-color: black;
+	border-style: double;
+	width: 60%;
+}
+
+#new-comment-submit {
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
+}
+
+/* All comments for the current video */
+.comment {
+	margin-right: auto;
+	margin-left: auto;
+
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
+
+	width: 60%;
+	margin-top: 2%;
+	margin-bottom: 2%;
+
+	padding: 1%;
 }
