--- a/templates/video.html
+++ b/templates/video.html
@@ -6,5 +6,15 @@
 	<link rel="stylesheet" href="{{ url_for("static", filename="css/video.css") }}"/>
 
 	<h1 id="video-title"> {{title}} - ({{year}}) </h1>
-	<video src="{{ url_for("static", filename=path) }}" controls/>
+	<video src="{{ url_for("static", filename=path) }}" controls></video>
+
+	<h2> Comments </h2>
+	<form action="#" method="post">
+		<input type="text" id="new-comment-text"i name="new-comment"/>
+		<input type="submit" value="Post Comment" id="new-comment-submit"/>
+	</form>
+
+	{% for comment in comments %}
+		<div class="comment"> {{comment["user"]}}: <hr/> {{comment["data"]}} </div>
+	{% endfor %}
 {% endblock %}
