--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,6 +4,11 @@ body {
 	font-family: Helvetica, sans-serif;
 }
 
+a {
+	text-decoration: none;
+	color: black;
+}
+
 /* Header */
 header {
 	text-align: center;
@@ -16,9 +21,8 @@ header {
 
 	border-style: solid;
 	border-width: 2px;
+	border-radius: 5px;
 	border-color: #F67280;
-
-	color: black;
 }
 
 .nav-button {
@@ -26,6 +30,7 @@ header {
 
 	font-family: serif;
 	font-weight: bold;
+
 }
 
 #logo {
@@ -58,14 +63,22 @@ input {
 
 /* Footer */
 footer {
+	margin-top: 20%;
 	padding: 1%;
 }
 
 .footer-button {
-	padding: 5px;
+	margin: 8px;
+
+	padding: 2px;
+
+	border-style: solid;
+	border-width: 1px;
 }
 
 #agpl-logo {
+	margin: 8px;
+
 	padding: 5px;
 	width: 8%;
 }
