--- a/static/css/index.css
+++ b/static/css/index.css
@@ -54,6 +54,24 @@ input {
 	margin-top: 6px;
 }
 
+.error-message {
+	margin-left: auto;
+	margin-right: auto;
+
+	border-style: solid;
+	border-width: 3px;
+	border-color: #B30000;
+
+	padding: 5px;
+	padding-left: auto;
+	padding-right: auto;
+
+	width: 50%;
+	background-color: #FF3333;
+
+	text-align: center;
+}
+
 #login-form { 
 	margin-left: 2%;
 	margin-right: 2%;
