--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 	{% with messages = get_flashed_messages() %}
 		{% if messages %}
 			{% for message in messages %}
-				<p class="message"> {{message}} </p>
+				<div class="error-message"> <b> Error: </b> {{message}} </div>
 			{% endfor %}
 		{% endif %}
 	{% endwith %}
